# uppu-mono-dc

./: .gitignore  CMakeLists.txt  README.md
.cmake/: Deploy.cmake
app/: CMakeLists.txt
app/res/: qml.qrc
app/res/AppUI/: AppUI.qrc  qmldir
app/res/AppUI/qml/: main.qml
app/res/AppUI/qml/pages/: Pages.qml  PrimaryPage.qml  ReportPage.qml  StartPage.qml
app/res/UI/: qml.qrc  qmldir
app/res/UI/qml/: main.qml
app/res/qml/: main.qml
app/res/qml/pages/: StartPage.qml
app/src/: main.cpp
app/src/config/: Common.cpp  Common.h  Module.cpp  Module.h
app/src/engine/: ApplicationEngine.cpp  ApplicationEngine.h  CurrentDevice.cpp  CurrentDevice.h  Dispatcher.cpp  Dispatcher.h
app/src/engine/device/: CalibratorInfo.cpp  CalibratorInfo.h  CalibratorReadings.cpp  CalibratorReadings.h  Device.cpp  Device.h  DeviceDefaults.cpp  DeviceDefaults.h  HiVoltageInfo.cpp  HiVoltageInfo.h  LoVoltageInfo.cpp  LoVoltageInfo.h  MetersInfo.cpp  MetersInfo.h  StatusInfo.cpp  StatusInfo.h
app/src/helper/: Data.cpp  Data.h  View.cpp  View.h
app/src/model/: DataView.cpp  DataView.h  DeviceItem.cpp  DeviceItem.h  DeviceModel.cpp  DeviceModel.h  MeterItem.cpp  MeterItem.h  MeterModel.cpp  MeterModel.h  Module.cpp  Module.h  PacketItem.cpp  PacketItem.h  PacketModel.cpp  PacketModel.h
app/src/network/: Helper.cpp  Helper.h  Module.cpp  Module.h  Packet.cpp  Packet.h  Payload.cpp  Payload.h  Searcher.cpp  Searcher.h
lib/: CMakeLists.txt
lib/res/SimDS/: SimDS.qrc  qmldir
lib/src/SimSDK/report/: ReportGenerator.cpp  ReportGenerator.h  ReportTemplate.cpp  ReportTemplate.h
(+45 files in other folders)
