set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )

set( CMAKE_AUTOMOC ON )
set( CMAKE_AUTORCC ON )

set( LIBRARY_NAME SimDS )

set( LIBRARY_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src )
set( LIBRARY_RCFILE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/res )

file( GLOB_RECURSE LIBRARY_HEADERS ${LIBRARY_SOURCE_DIR}/*.h )
file( GLOB_RECURSE LIBRARY_SOURCES ${LIBRARY_SOURCE_DIR}/*.cpp )
file( GLOB_RECURSE LIBRARY_RCFILES ${LIBRARY_RCFILE_DIR}/*.qrc )

add_library( ${LIBRARY_NAME} STATIC ${LIBRARY_HEADERS} ${LIBRARY_SOURCES} ${LIBRARY_RCFILES} )

find_package( Qt5 COMPONENTS Xml Qml Core Quick PrintSupport REQUIRED )

target_link_libraries( ${LIBRARY_NAME} Qt5::Xml Qt5::Qml Qt5::Core Qt5::Quick Qt5::PrintSupport )

target_include_directories( ${LIBRARY_NAME} PUBLIC ${LIBRARY_SOURCE_DIR} )
